data del 18 de septiembre cargada

--- a/src/analysis.ipynb
+++ b/src/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 107,
    "metadata": {
     "collapsed": true
    },
@@ -10,6 +10,7 @@
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "import geopandas as gpd\n",
     "import seaborn as sns\n",
     "from datetime import datetime\n",
     "%matplotlib inline"
@@ -17,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 108,
    "metadata": {
     "collapsed": false
    },
@@ -110,7 +111,7 @@
        "4        0.000000 2017-09-14 11:15:33.268  "
       ]
      },
-     "execution_count": 98,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
