data con geografia y barrios

--- a/src/downloadData.ipynb
+++ b/src/downloadData.ipynb
@@ -661,21 +661,303 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(196, 9)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AUTOMAT</th>\n",
+       "      <th>DIRE_NORM</th>\n",
+       "      <th>DOMICILIO</th>\n",
+       "      <th>Horario</th>\n",
+       "      <th>IMAGEN</th>\n",
+       "      <th>NOMBRE</th>\n",
+       "      <th>NRO_EST</th>\n",
+       "      <th>OBSERV</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AUTOMÁTICA</td>\n",
+       "      <td>FIGUEROA ALCORTA, PRES. AV. y BIBILONI, JUAN A.</td>\n",
+       "      <td>Av. Pres.Figueroa Alcorta y  Juan A.Bibiloni</td>\n",
+       "      <td>Estación automática: disponibilidad las 24 horas</td>\n",
+       "      <td>estacion_automatica.png</td>\n",
+       "      <td>Facultad de Derecho</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Abril 2015 (pasó de ser Manual a Automática)</td>\n",
+       "      <td>POINT (-58.39185516097447 -34.58358035902182)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AUTOMÁTICA</td>\n",
+       "      <td>DEL LIBERTADOR AV. y RAMOS MEJIA, JOSE MARIA, ...</td>\n",
+       "      <td>Av. Dr.Jose Ramos Mejia y Del Libertador Av</td>\n",
+       "      <td>Estación automática: disponibilidad las 24 horas</td>\n",
+       "      <td>estacion_automatica.png</td>\n",
+       "      <td>Retiro</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Abril 2015 (pasó de ser Manual a Automática)</td>\n",
+       "      <td>POINT (-58.37422545676812 -34.59303579060376)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AUTOMÁTICA</td>\n",
+       "      <td>HUERGO, ING. AV. y BELGRANO AV.</td>\n",
+       "      <td>Av. Ing.Huergo y Av. Belgrano</td>\n",
+       "      <td>Estación automática: disponibilidad las 24 horas</td>\n",
+       "      <td>estacion_automatica.png</td>\n",
+       "      <td>Aduana</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Abril 2015 (pasó de ser Manual a Automática)</td>\n",
+       "      <td>POINT (-58.36832159551064 -34.61168855013559)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AUTOMÁTICA</td>\n",
+       "      <td>LAVALLE y BOUCHARD</td>\n",
+       "      <td>Lavalle y Bouchard</td>\n",
+       "      <td>Estación automática: disponibilidad las 24 horas</td>\n",
+       "      <td>estacion_automatica.png</td>\n",
+       "      <td>Plaza Roma</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Abril 2015 (pasó de ser Manual a Automática)</td>\n",
+       "      <td>POINT (-58.36835420317743 -34.60216783080737)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AUTOMÁTICA</td>\n",
+       "      <td>GARCIA, MARTIN AV. e IRALA</td>\n",
+       "      <td>Av Martín García e Irala</td>\n",
+       "      <td>Estación automática: disponibilidad las 24 horas</td>\n",
+       "      <td>estacion_automatica.png</td>\n",
+       "      <td>Parque Lezama</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Abril 2015 (pasó de ser Manual a Automática)</td>\n",
+       "      <td>POINT (-58.36876396832855 -34.62839319029082)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      AUTOMAT                                          DIRE_NORM  \\\n",
+       "0  AUTOMÁTICA    FIGUEROA ALCORTA, PRES. AV. y BIBILONI, JUAN A.   \n",
+       "1  AUTOMÁTICA  DEL LIBERTADOR AV. y RAMOS MEJIA, JOSE MARIA, ...   \n",
+       "2  AUTOMÁTICA                    HUERGO, ING. AV. y BELGRANO AV.   \n",
+       "3  AUTOMÁTICA                                 LAVALLE y BOUCHARD   \n",
+       "4  AUTOMÁTICA                         GARCIA, MARTIN AV. e IRALA   \n",
+       "\n",
+       "                                      DOMICILIO  \\\n",
+       "0  Av. Pres.Figueroa Alcorta y  Juan A.Bibiloni   \n",
+       "1   Av. Dr.Jose Ramos Mejia y Del Libertador Av   \n",
+       "2                 Av. Ing.Huergo y Av. Belgrano   \n",
+       "3                            Lavalle y Bouchard   \n",
+       "4                      Av Martín García e Irala   \n",
+       "\n",
+       "                                            Horario                   IMAGEN  \\\n",
+       "0  Estación automática: disponibilidad las 24 horas  estacion_automatica.png   \n",
+       "1  Estación automática: disponibilidad las 24 horas  estacion_automatica.png   \n",
+       "2  Estación automática: disponibilidad las 24 horas  estacion_automatica.png   \n",
+       "3  Estación automática: disponibilidad las 24 horas  estacion_automatica.png   \n",
+       "4  Estación automática: disponibilidad las 24 horas  estacion_automatica.png   \n",
+       "\n",
+       "                NOMBRE  NRO_EST                                        OBSERV  \\\n",
+       "0  Facultad de Derecho        1  Abril 2015 (pasó de ser Manual a Automática)   \n",
+       "1               Retiro        2  Abril 2015 (pasó de ser Manual a Automática)   \n",
+       "2               Aduana        3  Abril 2015 (pasó de ser Manual a Automática)   \n",
+       "3           Plaza Roma        4  Abril 2015 (pasó de ser Manual a Automática)   \n",
+       "4        Parque Lezama        6  Abril 2015 (pasó de ser Manual a Automática)   \n",
+       "\n",
+       "                                        geometry  \n",
+       "0  POINT (-58.39185516097447 -34.58358035902182)  \n",
+       "1  POINT (-58.37422545676812 -34.59303579060376)  \n",
+       "2  POINT (-58.36832159551064 -34.61168855013559)  \n",
+       "3  POINT (-58.36835420317743 -34.60216783080737)  \n",
+       "4  POINT (-58.36876396832855 -34.62839319029082)  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "biciShape = gpd.read_file('../data/estaciones-de-bicicletas-rar/estaciones_de_bicicletas.shp')\n",
+    "biciShape = biciShape.to_crs(epsg=4326)\n",
+    "print biciShape.shape\n",
+    "biciShape.head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(196, 14)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bicisConBarrio = gpd.sjoin(biciShape, barrios, how=\"inner\", op='intersects')\n",
+    "print bicisConBarrio.shape\n",
+    "print bicisConBarrio.BARRIO.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>NRO_EST</th>\n",
+       "      <th>disponibilidad</th>\n",
+       "      <th>fecha</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>01</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2017-09-18 00:12:24.031035</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>02</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>2017-09-18 00:12:24.031035</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>03</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2017-09-18 00:12:24.031035</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>04</td>\n",
+       "      <td>29.411765</td>\n",
+       "      <td>2017-09-18 00:12:24.031035</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>06</td>\n",
+       "      <td>3.571429</td>\n",
+       "      <td>2017-09-18 00:12:24.031035</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  NRO_EST  disponibilidad                      fecha\n",
+       "0      01        0.000000 2017-09-18 00:12:24.031035\n",
+       "1      02        5.000000 2017-09-18 00:12:24.031035\n",
+       "2      03        0.000000 2017-09-18 00:12:24.031035\n",
+       "3      04       29.411765 2017-09-18 00:12:24.031035\n",
+       "4      06        3.571429 2017-09-18 00:12:24.031035"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "biciShape.NRO_EST = ['0' + str(i) if len(str(i)) == 1 else str(i) for i in biciShape.NRO_EST]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(16856, 11)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "biciShape = biciShape.merge(datos)\n",
+    "biciShape.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "biciShape.fecha = biciShape.fecha.map(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "biciShape.to_file('../data/18septiembre')"
+   ]
   },
   {
    "cell_type": "code",
